# pcl-exercises

./: README.md
10.1normal_estimation/source/: normal_estimation.cpp
10.2normal_estimation_using_integral_images/source/: normal_estimation_using_integral_images.cpp
10.3narf_feature_extraction/source/: CMakeLists.txt  narf_feature_extraction.cpp
10.4fpfh_radius/source/: fpfh_radius.cpp
10.5rops/source/: rops_feature.cpp
10.6MomentOfInertiaEstimation/source/: CMakeLists.txt  moment_of_inertia.cpp
10.7boundary_source/: boundary.cpp
10.7boundary_source/data/: CMakeCache.txt  Makefile  boundary  cmake_install.cmake
10.8Hypothesis_Verification_for_3D_Object_Recognition/source/: global_hypothesis_verification.cpp
10.9Implicit Shape Model/source/: implicit_shape_model_classification.cpp  implicit_shape_model_training.cpp
11.1iterative_closest_point/source/: iterative_closest_point.cpp
11.3normal_distributions_transform/source/: CMakeLists.txt  normal_distributions_transform.cpp
11.5Robust_pose_estimation_of_rigid_objects/source/: alignment_prerejective.cpp
11.6template_alignment/source/: template_alignment.cpp
11.6template_alignment/source/data/: CMakeCache.txt  Makefile  cmake_install.cmake  output.pcd  template_alignment
11.7cluster recognition/source/: CMakeLists.txt  build_tree.cpp  nearest_neighbors.cpp
12.10Conditional EuclideanClustering/source/: conditional_euclidean_clustering.cpp
12.11motion_seg_source/source/: CMakeCache.txt  HybirdICP  Makefile  cmake_install.cmake
12.1planar_segmentation/source/: planar_segmentation.cpp
12.2cylinder_segmentation/source/: cylinder_segmentation.cpp
12.3cluster_extraction_no/source/: cluster_extraction.cpp
12.4region_growing_segmentation/source/: region_growing_segmentation.cpp
12.5color_based_region_growing_segmentation/source/: region_growing_rgb_segmentation.cpp
12.6Min-cut segmentation/source/: min_cut_segmentation.cpp
12.7DoD/source/: don_segmentation.cpp
12.8SupervoxelClustering/Source/: supervoxel_clustering.cpp
4.1kdtree_search/source/: kdtree_search.cpp
4.3octree_search/source/: octree_search.cpp
4.4octree_change_detection/source/: octree_change_detection.cpp
5.1cloud_viewer/source/: cloud_viewer.cpp
5.2range_image_visualization/source/: range_image_visualization.cpp
5.3pcl_visualizer_demo/source/: CMakeLists.txt  pcl_visualizer_demo.cpp
6.1passthrough/source/: passthrough.cpp
6.2voxel_grid/source/: voxel_grid.cpp
6.3statistical_removal/source/: statistical_removal.cpp
6.4project_inliers/source/: project_inliers.cpp
6.5extract_indices/source/: extract_indices.cpp
6.6remove_outliers/source/: remove_outliers.cpp
6.7CropHull/source/: crophull.cpp
7.1range_image_creation/source/: range_image_creation.cpp
7.3/source/: greedy_projection.cpp
8.1narf_keypoint_extraction/source/: narf_keypoint_extraction.cpp
8.3/: Harrisdetect.cpp
8.4Correspondence Grouping/source/: correspondence_grouping.cpp
9.1random_sample_consensus/source/: CMakeLists.txt  random_sample_consensus.cpp
9.2matrix_ransac/source/: matrix_ransac.cpp
